force-app/main/default/objects/Commission_Statement__c/Commission_Statement__c.object-meta.xml
<CustomObject>
    <description>Header for a single carrier statement (file + period). Owns lifecycle, totals, and the link to the source file.</description>
    <label>Commission Statement</label>
    <nameField>
        <displayFormat>CST-{YYYYMM}-{0000}</displayFormat>
        <label>Commission Statement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>