force-app/main/default/objects/Commission_Statement__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Carrier that issued this commission statement.</description>
    <inlineHelpText>Choose the carrier (e.g., United Healthcare, BCBS). Used to validate/match all child lines.</inlineHelpText>
    <label>Insurance Provider</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Select an Company with record type Insurance Provider.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Insurance Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commission Statements</relationshipLabel>
    <relationshipName>Commission_Statements</relationshipName>
    <type>Lookup</type>
</CustomField>