force-app/main/default/objects/Commission_Statement__c/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <description>Commission payment period (year-month).</description>
    <inlineHelpText>Enter in YYYY-MM format (e.g., 2025-06). Used for reporting and deduping.</inlineHelpText>
    <label>Payment Period</label>
    <length>10</length>
    <type>Text</type>
</CustomField>