force-app/main/default/objects/Commission_Statement__c/fields/Source_Format__c.field-meta.xml
<CustomField>
    <fullName>Source_Format__c</fullName>
    <description>Declares the file format/mapping used by the parser.</description>
    <inlineHelpText>Select the file profile that matches the uploaded file.</inlineHelpText>
    <label>Source Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>XLSX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>