force-app/main/default/objects/Commission_Statement__c/fields/Total_Lines__c.field-meta.xml
<CustomField>
    <fullName>Total_Lines__c</fullName>
    <description>Total number of child commission lines.</description>
    <inlineHelpText>Auto-calculated from related Commission Lines.</inlineHelpText>
    <label>Total Lines</label>
    <summaryForeignKey>Commission_Line__c.Commission_Statement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>