force-app/main/default/objects/Commission_Statement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specifies whether the commission statement applies to an individual recipient or represents a grouped commission record for multiple recipients or aggregated calculations.</description>
    <inlineHelpText>Select Individual for commission statements generated for a single payee.
Select Group for commission statements that represent aggregated or grouped commissions across multiple payees, plans, or reporting units.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>