force-app/main/default/objects/Commission_Statement__c/validationRules/Payment_Period_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Period_Format</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX(Payment_Period__c, &quot;20\\d\\d-(0[1-9]|1[0-2])&quot;) )</errorConditionFormula>
    <errorDisplayField>Payment_Period__c</errorDisplayField>
    <errorMessage>Payment Period must be in YYYY-MM format (e.g., 2025-06).</errorMessage>
</ValidationRule>