force-app/main/default/objects/Commission_Statement__c/listViews/Ambetter.listView-meta.xml
<ListView>
    <fullName>Ambetter</fullName>
    <columns>NAME</columns>
    <columns>Insurance_Provider__c</columns>
    <columns>Payment_Period__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Insurance_Provider__c</field>
        <operation>equals</operation>
        <value>Ambetter</value>
    </filters>
    <label>Ambetter</label>
</ListView>